# Allocator

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
include/: PlacementPolicy.h  arena_allocator.h  block_allocator.h  boundary_tag_allocator.h  placement_policy.h
src/: boundary_tag_allocator.cpp  placement_policy.cpp
test/: arena_allocator_suite.cpp  block_allocator_suite.cpp  boundary_tag_allocator_suite.cpp  placement_policy_suite.cpp
